# webdavcontents

./: .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/webdavcontents/: manager.py
