[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webdavcontents"
version = "0.1.5"
authors = [
    { name="Sangwoo Shim", email="sangwoo@makinarocks.ai" },
]
description = "A Jupyter server contents manager for WebDAV contents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webdavcontents"]

[tool.black]
line-length = 119
target-version = ['py38']
